--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "4.0.1",
+    "@pinia/nuxt": "0.11.2",
+    "@vueuse/nuxt": "13.9.0",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
+    "pinia": "^3.0.3",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.0"
