--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^3.0.3",
     "typescript": "^5.9.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.0"
+    "vue-router": "^4.6.0",
+    "zod": "^4.1.12"
   }
 }
