--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
     "@nuxt/ui": "4.0.1",
     "@pinia/nuxt": "0.11.2",
     "@vueuse/nuxt": "13.9.0",
+    "crypto-js": "^4.2.0",
     "eslint": "^9.37.0",
     "nuxt": "^4.1.3",
     "pinia": "^3.0.3",
@@ -21,5 +23,8 @@
     "vue": "^3.5.22",
     "vue-router": "^4.6.0",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.2.2"
   }
 }
